unwanted code removed
Signed-off-by: Arjav <arjavdongaonkar@gmail.com>